WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95686
Web Inspector: new CPU Profiles are not shown after reattach
https://bugs.webkit.org/show_bug.cgi?id=95686
Summary
Web Inspector: new CPU Profiles are not shown after reattach
Sergey Rogulenko
Reported
2012-09-03 06:44:17 PDT
1. open new tab (for example, about:blank) 2. open devtools page, choose Profiles tab 3. go to another site to cause reattach (for example, google.com) 4. start and stop recording CPU Profile New CPU Profile will not appear in Profiles panel.
Attachments
Patch
(1.47 KB, patch)
2012-09-03 22:57 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-09-03 22:57:24 PDT
Created
attachment 161967
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-04 01:53:08 PDT
Comment on
attachment 161967
[details]
Patch Clearing flags on attachment: 161967 Committed
r127448
: <
http://trac.webkit.org/changeset/127448
>
WebKit Review Bot
Comment 3
2012-09-04 01:53:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug