Web Inspector: new CPU Profiles are not shown after reattach https://bugs.webkit.org/show_bug.cgi?id=95686

Reviewed by Vsevolod Vlasov.

* inspector/InspectorProfilerAgent.cpp:
(WebCore::InspectorProfilerAgent::restore): set m_headersRequested flags
to true and clear all profiles on the front-end since there are no
collected profiles yet immediately after render process sitching.


Canonical link: https://commits.webkit.org/113602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127448 268f45cc-cd09-0410-ab3c-d52691b4dbfc